Adapt some deprecated calls and suppress warnings.