@@ -59,7 +59,7 @@ public class TableEditorCellModifier implements ICellModifier {
 		Object object = row.getValue(columnIndex);
 		if (isComboBoxEditor) {
 			int index = Arrays.asList(((ComboBoxCellEditor)cellEditor).getItems()).indexOf(object.toString());
-			object = new Integer(index);
+			object = Integer.valueOf(index);
 		}
 		
 		if (isTextCellEditor && (!(object instanceof String))) {
