@@ -209,7 +209,7 @@ public class TestCase extends DatabaseObject implements IVariableContainer, ICon
     
     private void increaseOrder(DatabaseObject databaseObject, Long before) throws EngineException {
     	List<Long> ordered = null;
-    	Long value = new Long(databaseObject.priority);
+    	Long value = Long.valueOf(databaseObject.priority);
     	
     	if (databaseObject instanceof Variable)
     		ordered = orderedVariables.get(0);
